<resources>
    <string name="app_name">Technology Den</string>
    <string name="slogan">Welcome to the Land of Technology. Your World to a better future begins</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="terms_and_conditions"><u>View Terms and Conditions</u></string>

    <string name="help1">1. All Credentials are confidentially stored.</string>
    <string name="help2">2. All Orders are confirmed by the store ordered. Incorrect transactions will not be processed.</string>
    <string name="help3">3. All Payments are done via the PayPal application.</string>
    <string name="help4">4. Please contact Support on 7778889990 for further assistance.</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="my_profile">My Profile</string>
    <string name="products">Products</string>
    <string name="cart">Cart Orders</string>
    <string name="my_orders">Order Requests</string>
    <string name="logout">Logout</string>
    <string name="title_activity_tracking_order">Tracking Order</string>
</resources>
